<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_tweet_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.thunder.simplytweet.activities.TweetDetailsActivity"
    >
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    >

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:srcCompat="@drawable/ic_launcher"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:scaleType="fitXY"
        android:id="@+id/tweet_details_profile_image" />

    <TextView
        android:text="TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/tweet_details_profile_image"
        android:layout_marginLeft="16dp"
        android:textStyle="bold"
        android:textSize="@dimen/tweet_timeline_name_size"
        android:layout_toEndOf="@+id/tweet_details_profile_image"
        android:id="@+id/tweet_details_name" />

    <TextView
        android:text="TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tweet_details_name"
        android:layout_alignLeft="@+id/tweet_details_name"
        android:textSize="@dimen/tweet_timeline_name_size"
        android:id="@+id/tweet_details_screen_name" />

    <TextView
        android:text="TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tweet_details_profile_image"
        android:paddingTop="@dimen/tweet_details_item_padding"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:textSize="@dimen/tweet_details_body_size"
        android:paddingBottom="@dimen/tweet_details_item_padding"
        android:id="@+id/tweet_details_body" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_launcher"
        android:layout_below="@+id/tweet_details_body"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/tweet_details_media_image" />

    <com.volokh.danylo.video_player_manager.ui.VideoPlayerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tweet_details_body"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignBottom="@+id/tweet_details_media_image"
        android:layout_alignRight="@+id/tweet_details_media_image"
        android:visibility="gone"
        android:id="@+id/video"/>

    <TextView
        android:text="@string/tweet_details_retweet_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tweet_details_media_image"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="@dimen/tweet_timeline_name_size"
        android:id="@+id/tweet_details_retweets_label" />

    <TextView
        android:text="@string/tweet_details_likes_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tweet_details_retweets_label"
        android:layout_toRightOf="@+id/tweet_details_retweets_label"
        android:layout_marginLeft="16dp"
        android:layout_toEndOf="@+id/tweet_details_retweets_label"
        android:textSize="@dimen/tweet_timeline_name_size"
        android:id="@+id/tweet_details_likes_label" />

    <TextView
        android:text="TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tweet_details_retweets_label"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="@color/primary_dark"
        android:textSize="@dimen/tweet_timeline_body_size"
        android:id="@+id/tweet_details_retweets_count" />

    <TextView
        android:text="TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tweet_details_retweets_count"
        android:layout_toRightOf="@+id/tweet_details_retweets_label"
        android:layout_alignLeft="@+id/tweet_details_likes_label"
        android:textColor="@color/primary_dark"
        android:textSize="@dimen/tweet_timeline_body_size"
        android:id="@+id/tweet_details_likes_count" />

    <TextView
        android:text="TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tweet_details_retweets_count"
        android:id="@+id/tweet_details_timestamp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_launcher"
        android:layout_below="@+id/tweet_details_timestamp"
        android:layout_toLeftOf="@+id/tweet_details_likes_count"
        android:layout_toStartOf="@+id/tweet_details_likes_count"
        android:visibility="gone"
        android:id="@+id/tweet_details_reply" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_launcher"
        android:layout_below="@+id/tweet_details_timestamp"
        android:layout_toRightOf="@+id/tweet_details_reply_button"
        android:layout_toEndOf="@+id/tweet_details_reply_button"
        android:visibility="gone"
        android:id="@+id/tweet_details_retweet_button" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_launcher"
        android:layout_alignTop="@+id/tweet_details_retweet_button"
        android:layout_toRightOf="@+id/tweet_details_retweet_button"
        android:layout_toEndOf="@+id/tweet_details_retweet_button"
        android:visibility="gone"
        android:id="@+id/tweet_details_likes_button" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_launcher"
        android:layout_below="@+id/tweet_details_reply_button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:visibility="gone"
        android:id="@+id/tweet_details_user_profile_image" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/tweet_details_reply_edittext"
        android:layout_toRightOf="@+id/tweet_details_user_profile_image"
        android:layout_toLeftOf="@+id/tweet_details_reply_button"
        android:layout_toStartOf="@+id/tweet_details_reply_button"
        android:layout_alignTop="@+id/tweet_details_reply_button"
        android:layout_alignParentBottom="true"
        android:hint="@string/tweet_details_reply_to"
        android:layout_below="@+id/tweet_details_timestamp" />

    <Button
        android:text="@string/tweet_details_reply_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tweet_details_timestamp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:id="@+id/tweet_details_reply_button"
        style="@style/Widget.AppCompat.Button.Colored"/>
</RelativeLayout>
</ScrollView>
